; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_streams.c_streams_modify_update.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_streams.c_streams_modify_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tagMSIVIEW = type { i32 }
%struct.TYPE_3__ = type { i32 }

@ERROR_SUCCESS = common dso_local global i64 0, align 8
@ERROR_FUNCTION_FAILED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.tagMSIVIEW*, i32*)* @streams_modify_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @streams_modify_update(%struct.tagMSIVIEW* %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.tagMSIVIEW*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.tagMSIVIEW* %0, %struct.tagMSIVIEW** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %4, align 8
  %10 = bitcast %struct.tagMSIVIEW* %9 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %10, %struct.TYPE_3__** %6, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @streams_find_row(%struct.TYPE_3__* %11, i32* %12, i64* %8)
  store i64 %13, i64* %7, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* @ERROR_SUCCESS, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i64, i64* @ERROR_FUNCTION_FAILED, align 8
  store i64 %18, i64* %3, align 8
  br label %29

19:                                               ; preds = %2
  %20 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %4, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = shl i32 1, %25
  %27 = sub nsw i32 %26, 1
  %28 = call i64 @STREAMS_set_row(%struct.tagMSIVIEW* %20, i64 %21, i32* %22, i32 %27)
  store i64 %28, i64* %3, align 8
  br label %29

29:                                               ; preds = %19, %17
  %30 = load i64, i64* %3, align 8
  ret i64 %30
}

declare dso_local i64 @streams_find_row(%struct.TYPE_3__*, i32*, i64*) #1

declare dso_local i64 @STREAMS_set_row(%struct.tagMSIVIEW*, i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
